Integration tests + UserController + Security configuration